--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailwind-z-hierarchy",
   "version": "1.0.0",
-  "description": "Keep z-index organized with an array of z-index levels",
+  "description": "Keep z-index organized with a z-index hierarchy array",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
