--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwind-z-hierarchy",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "Keep z-index organized with a z-index hierarchy array",
   "main": "src/index.js",
   "types": "index.d.ts",
@@ -16,7 +16,7 @@
     "z-index"
   ],
   "peerDependencies": {
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0 || ^4.0.0"
   },
   "author": "Grady Woodruff <gradywoodruff@mac.com>",
   "license": "ISC",
