--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "tailwind-z-hierarchy",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Keep z-index organized with a z-index hierarchy array",
   "main": "src/index.js",
+  "module": "src/index.js",
   "types": "index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "require": "./src/index.js"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
